--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -9,6 +9,13 @@
     gap: 45px;
     margin: 100px 50px;
 }
+.cart-text{
+    margin-left: 20px;
+}
+.cart-container{
+    background-color: rgba(255,153,0,0.3);
+    border-radius: 20px;
+}
 @media screen  and (max-width:1100px) {
     .products-container{
         grid-template-columns: repeat(2, 1fr);
